# finaap

./: .gitignore  docker-compose.yml  pyproject.toml  results.json  test.json
src/: main.py  results.json
src/apps/bank/: admin.py  models.py  urls.py  views.py
src/apps/bank/api/: router.py  routes.py  serializers.py  views.py
src/apps/currency/: models.py  urls.py
src/apps/currency/api/: routes.py  serializers.py  views.py
src/core/: urls.py
src/core/settings/: base.py  development.py
src/modules/: scrapy.cfg
src/modules/currency_wrapper/: items.py  middlewares.py  pipelines.py  settings.py
src/modules/currency_wrapper/spiders/: floatrates.py
src/modules/floatrates/: config.py  spider.py
